--- a/app/assets/templates/listings/new.jst.ejs
+++ b/app/assets/templates/listings/new.jst.ejs
@@ -67,6 +67,6 @@
 	
 	<span class="error-bar"></span>
 	
-  <button>Create Listing</button>
+  <button class="save-button">Create Listing</button>
 
 </form>
