--- a/app/assets/stylesheets/listings_show.css.scss
+++ b/app/assets/stylesheets/listings_show.css.scss
@@ -164,10 +164,14 @@
 }
 
 .more-info tr {
-	padding: 5px 0;
+	padding: 10px 0;
 	text-align: left;
 }
 
 .more-info th {
 	padding-right: 15px;
+}
+
+.more-info ul.amenity-list {
+	padding-top: 10px;
 }
