--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v2.0.1/mapbox.css' rel='stylesheet' />
 </head>
 <body>
+	
+	<div class="modal-screen"></div>
+	<div class="modal-card"></div>
 
   <header class="group">
     <a href="<%= home_url %>" class="logo"></a>
