--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -75,14 +75,19 @@ input[type="submit"], button {
 
 /* STYLES */
 
+html {
+	height: 100%;
+}
+
 body {
+	height: 100%;
 	position: relative;
 	background: #999;
 }
 
 main.main-content {
 	width: 1100px;
-	padding-top: 70px;
+	padding: 70px 0 20px 0;
 	background: #fff;
 	margin: auto;
 }
@@ -239,11 +244,14 @@ form {
 
 .notice-bar {
 	position: fixed;
-	background: red;
+	top: 80px;
+	background: #0f0;
+	left: 440px;
 	color: white;
 	font-weight: bold;
-	z-index: 1000;
+	z-index: 5;
 	display: block;
+	opacity: 0.8;
 }
 
 .error-bar {
@@ -269,7 +277,7 @@ form {
 
 .modal-screen {
 	display: none;
-	position: absolute;
+	position: fixed;
 	height: 100%;
 	width: 100%;
 	background: #000;
@@ -277,8 +285,24 @@ form {
 	z-index: 9;
 }
 
+.modal-screen.active {
+	display: block;
+}
+
 .modal-card {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-left: -300px;
+	margin-top: -200px;
+	height: 400px;
+	width: 600px;
 	display: none;
 	z-index: 10;
 	background: #fff;
+	border-radius: 30px;
+}
+
+.modal-card.active {
+	display: block;
 }
