Implement modal interceptor for unauthorized actions.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -247,7 +247,7 @@ form {
 	top: 80px;
 	background: #0f0;
 	left: 440px;
-	color: white;
+	color: #000;
 	font-weight: bold;
 	z-index: 5;
 	display: block;
