--- a/app/assets/stylesheets/auth.css.scss
+++ b/app/assets/stylesheets/auth.css.scss
@@ -1,4 +1,5 @@
 .auth-modal {
+	position: relative;
 	padding: 10px;
 	
 	h1 {
@@ -59,4 +60,12 @@
 	border-top: 1px solid #121B32;
 	background: #365097;
 	padding-bottom: 9px;
+}
+
+.exit {
+	position: absolute;
+	top: 15px;
+	right: 20px;
+	font-size: 20px;
+	cursor: pointer;
 }
