--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,6 +32,4 @@
   <button>Sign Up</button>
 </form>
 
-<h3>Or sign up using Facebook...</h3>
-
-<!-- Facebook Auth button goes here! -->
+<a href="/auth/facebook" class="facebook-auth">Or sign up with Facebook!</a>
