--- a/app/assets/templates/users/edit.jst.ejs
+++ b/app/assets/templates/users/edit.jst.ejs
@@ -35,7 +35,7 @@
 	<input type="file" name="avatar" id="user-avatar">
 	<label for="user-avatar">Upload an Avatar</label>
 	
-	<small>*If you've signed in with Facebook, your Facebook profile picture is set by default.</small>
+	<small>If you've signed in with Facebook, your Facebook profile picture is set by default.</small>
 	
   <button>Update Profile</button>
 </form>
