--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -245,18 +245,23 @@ form {
 .notice-bar {
 	position: fixed;
 	top: 80px;
-	background: #0f0;
+	background: #02E6FB;
 	left: 440px;
 	color: #000;
 	font-weight: bold;
 	z-index: 5;
 	display: block;
 	opacity: 0.8;
+	border-radius: 20px;
+	
+	* {
+		padding: 20px;
+	}
 }
 
 .error-bar {
 	display: block;
-	background: #C7150C;
+	background: #FB7600;
 	font-weight: bold;
 	color: #fff;
 	border-radius: 20px;
