Initialize backbone app with a current user property.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,6 +37,8 @@
 
 <script>
 	$(document).ready(function(){
-	  AirNZG.initialize();
+	  AirNZG.initialize({
+	  	currentUserId: <%= current_user.id %>
+	  });
 	});
 </script>
