Use current user rather than 401 response to pop sign-in modal. No longer trigger a route to make backward navigation easier.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,7 @@
 <script>
 	$(document).ready(function(){
 	  AirNZG.initialize({
-	  	currentUserId: <%= current_user.id %>
+	  	currentUserId: <%= signed_in? ? current_user.id : 0 %>
 	  });
 	});
 </script>
