--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,26 +79,28 @@
 	    </nav>
 	  </header>
 		
+
+		
+		<div class="modal-screen"></div>
+		<div class="modal-card"></div>
+		
 		<span class="notice-bar">
 	    <% if !!flash[:notice] %>
 	      <div class="notice"><%= flash[:notice] %></div>
 	    <% end %>
-
-	    <% if !!flash[:errors] %>
-	      <ul class="errors">
-	        <% flash[:errors].each do |error| %>
-	          <li><%= error %></li>
-	        <% end %>
-	      </ul>
-	    <% end %>
 		</span>
 		
-		<div class="modal-screen"></div>
-		<div class="modal-card"></div>
-
 	  <main class="main-content group">
-			
-
+		
+			<span class="error-bar">
+		    <% if !!flash[:errors] %>
+		      <ul class="errors">
+		        <% flash[:errors].each do |error| %>
+		          <li><%= error %></li>
+		        <% end %>
+		      </ul>
+		    <% end %>
+			</span>
 		
 	    <%= yield %>
 		
