Add sign out functionality. Fix bugs in API/sessions controller.

--- a/app/assets/templates/header_signed_out.jst.ejs
+++ b/app/assets/templates/header_signed_out.jst.ejs
@@ -1,6 +1,8 @@
+<a href="/" class="logo"></a>
+
 <ul class="header-nav group">
 	<li class="sign-in">
-	  <a href="/sessions/new">Sign In</a>
+	  <a href="#" class="sign-in-link">Sign In</a>
 	</li>
 
 	<li class="sign-up">
