--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -67,19 +67,24 @@ article.root-content {
 
 .parallel-radios > input[type=radio] {
 	background: #008A99;
-	height: 50px;
-	width: 150px;
+	height: 40px;
+	width: 140px;
+	padding: 5px;
 	display: block;
 	float: left;
 	position: relative;
 	margin: 1px;
+//	box-shadow: 0px 1px 3px #000;
+//	-moz-box-shadow: 0px 1px 3px #000;
+//	-webkit-box-shadow: 0px 1px 3px #000;
+	
 }
 
 .parallel-radios > input[type=radio]:checked {
 	background: #00606B;
+	position:relative;
+	top: 1px;
 }
-
-
 
 .city-accommodates-input {
 	label {
