--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -290,7 +290,7 @@ form {
 	width: 100%;
 	background: #000;
 	opacity: 0.7;
-	z-index: 9;
+	z-index: 10000;
 }
 
 .modal-screen.active {
@@ -306,7 +306,7 @@ form {
 	height: 400px;
 	width: 600px;
 	display: none;
-	z-index: 10;
+	z-index: 10001;
 	background: #fff;
 	border-radius: 30px;
 }
@@ -315,11 +315,14 @@ form {
 	display: block;
 }
 
-.loading {
-	width: 100px;
-	height: 100px;
+.loading-main {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 10000;
 	background: url(image-path('loading.gif'));
-	background-size: contain;
+	background-color: #ddd;
+	background-size: 50px 50px;
+	background-repeat: no-repeat;
 	background-position: center;
-	margin: 200px auto;
 }
