--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
 	  <header class="group">
 	  </header>
 		
+		<div class="loading-main"></div>
+		
 		<div class="modal-screen"></div>
 		<div class="modal-card"></div>
 		
