--- a/app/assets/templates/header_signed_in.jst.ejs
+++ b/app/assets/templates/header_signed_in.jst.ejs
@@ -1,4 +1,4 @@
-<a href="/" class="logo"></a>
+<a href="#" class="logo"></a>
 
 <ul class="header-nav group">
 	<li class="user-info">
@@ -33,7 +33,8 @@
 			<ul class="dropdown">
 				<% user.get("notifications").forEach(function(notification) { %>
 					<li>
-						<a href="<%= notification.url %>">
+						<a href="<%= notification.url %>" class="notif" 
+							data-id="<%= notification.id %>">
 							<%= notification.text %>
 						</a>
 					</li>
