Create views for conversation index and show. Fix bookings model so that creation validations only trigger on creation.

--- a/app/assets/templates/header_signed_in.jst.ejs
+++ b/app/assets/templates/header_signed_in.jst.ejs
@@ -47,7 +47,7 @@
 		</div>
 
 	   <li class="messages">
-			<a href="#">Messages</a>
+			<a href="#/conversations">Conversations</a>
 		</li>
 
 		<li class="new-listing">
