Refactor messages code drastically.

--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,7 +1,7 @@
 <section class="sidebar">
 	<div class="avatar-block">
 		<img src="<%= user.escape("avatar_medium") %>">
-		<a href="#">contact</a>
+		<a href="#" class="contact-link">contact</a>
 	</div>
 </section>
 
