--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
   width: 40%;
   height: 750px;
-  border-right: 5px solid #222;
+	border-right: 2px solid #ddd;
   float: left;
   display: block;
 }
