--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,10 @@
 	    <%= yield %>
 		</main>
 	
+		<footer class="group">
+			<small class="copy">&copy; 2014, Noah Zachary Gordon</small>
+			<small class="hire"><a href="#">Hire NzG</a></small>
+		</footer>
 	</body>
 </html>
 
