--- a/app/assets/templates/listings/filter.jst.ejs
+++ b/app/assets/templates/listings/filter.jst.ejs
@@ -44,3 +44,9 @@
 	<div class="price-slider"></div>
 	<div class="price-high"></div>
 </article>
+
+<section class="hidden-params">
+	HIDDEN!
+</section>
+
+<div class="expander">⬇</div>
