--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -16,9 +16,37 @@
 }
 
 .listing-params {
+	width: 570px;
+	overflow: hidden;
   display: block;
 	margin: auto;
-  padding: 20px;
+  padding: 20px 0;
+	padding-bottom: 30px;
+	margin-bottom: 20px;
+	position: relative;
+	border-bottom: 3px solid #555;
+}
+
+.listing-params .expander {
+	display: block;
+	width: 50px;
+	height: 30px;
+	z-index: 500;
+	position: absolute;
+	left: 50%;
+	margin-left: -30px;
+	bottom: 10px;
+	background: #555;
+	color: #ddd;
+	border-radius: 10px;
+	text-align: center;
+	font-size: 20px;
+	padding: 3px 5px;
+	cursor: pointer;
+}
+
+.listing-params .hidden-params {
+	display: none;
 }
 
 .listing-params strong {
@@ -91,20 +119,33 @@
 	left: 10px;
 }
 
-.price > input {
-	border: 1px solid black;
+article.price {
+	width: 550px;
+	
+	input {
+		border: 1px solid black;
+	}
+
+	div {
+		padding: 0 20px;
+		width: 50px;
+		display: block;
+		float: left;
+	}
+
+	div.price-slider {
+		display: block;
+		width: 250px;
+		margin: 10px auto;
+		
+		.ui-slider-range {
+			width: 250px;
+			padding: 0;
+		}
+	}
 }
 
-.price > div {
-	width: 50px;
-	display: block;
-	float: left;
-}
 
-div.price-slider {
-	width: 298px;
-	margin: 10px auto;
-}
 
 .filter-form > button {
   display: block;
