Get sliding expansion working.

--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -49,6 +49,10 @@
 	display: none;
 }
 
+.listing-params .hidden-params.expanded {
+	display: block;
+}
+
 .listing-params strong {
 	display: block;
 	float: left;
