--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -81,25 +81,30 @@
 	margin: auto;
 }
 
-.room > input[type=radio] {
+.listing-params input[type=radio] {
 	padding: 0 10px;
 	background: #008A99;
 	height: 30px;
-	width: 90px;
+	width: 60px;
 	display: block;
 	float: left;
 	position: relative;
 	margin: 1px 10px;
 	border-radius: 10px;
-	
+
 	color: #fff;
 	font-weight: bold;
 	font-family: sans-serif;
 	font-size: 14px;
 }
-
-.room > input[type=radio]:checked {
+	
+.listing-params input[type=radio]:checked {
 	background: #00606B;
+}
+
+.room > input[type=radio] {
+	height: 30px;
+	width: 90px;
 }
 
 .room > #room-type-whole:after {
@@ -213,4 +218,93 @@ article.price {
 	background-size: 50px 50px;
 	background-repeat: no-repeat;
 	background-position: center;
+}
+
+.hidden-params {
+	
+	article {
+		display: block;
+		margin: auto;
+		padding-left: 50px;
+		padding-bottom: 20px;
+		width: 400px;
+	}
+	
+	.term {
+		#long-term {
+			margin-left: 20px;
+			margin-right: 100px;
+		}
+		
+		#long-term:after {
+			position: absolute;
+			content: "Long";
+			top: 7px;
+			left: 20px;
+		}
+		
+		#short-term {
+			margin-left: 100px;
+			margin-right: 20px;
+		}
+		
+		#short-term:after {
+			position: absolute;
+			content: "Short";
+			top: 7px;
+			left: 20px;
+		}
+	}
+	
+	.home {
+	
+		#home-type-apt:after {
+			position: absolute;
+			content: "Apartment";
+			top: 7px;
+			left: 5px;
+		}
+	
+		#home-type-house:after {
+			position: absolute;
+			content: "House";
+			top: 7px;
+			left: 18px;
+		}
+	
+		#home-type-mansion:after {
+			position: absolute;
+			content: "Mansion";
+			top: 7px;
+			left: 11px;
+		}
+	
+		#home-type-cave:after {
+			position: absolute;
+			content: "Cave";
+			top: 7px;
+			left: 22px;
+		}
+	}
+	
+	.accommodates {
+		input {
+			margin-top: 5px;
+			padding: 5px;
+			text-align: center;
+			border: 1px solid #000;
+		}
+	}
+	
+	.amenities {
+		display: block;
+		width: 150px;
+		float: left;
+		margin-bottom: 20px;
+		
+		.amenity-wrapper {
+			display: block;
+			text-align: left;
+		}
+	}
 }
