Finish expandable extra filters.

--- a/app/assets/templates/listings/filter.jst.ejs
+++ b/app/assets/templates/listings/filter.jst.ejs
@@ -85,7 +85,7 @@
 	<strong>Accommodates:</strong>
 	<article class="accommodates group">
 		<input type="number" name="accomodates" id="listing-accomodates" 
-			placeholder="# of Guests">
+			min="1" max="4">
 	</article>
 	
 	<strong>Amenities: </strong>
