--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -213,7 +213,7 @@ article.price {
 
 .loading-list {
 	width: 550px;
-	height: 400px;
+	height: 150px;
 	background: url(image-path('loading.gif'));
 	background-size: 50px 50px;
 	background-repeat: no-repeat;
@@ -289,6 +289,8 @@ article.price {
 	
 	.accommodates {
 		input {
+			border-radius: 20px;
+			float: left;
 			margin-top: 5px;
 			padding: 5px;
 			text-align: center;
