--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,9 @@
 	
 		<footer class="group">
 			<small class="copy">&copy; 2014, Noah Zachary Gordon</small>
-			<small class="hire"><a href="#">Hire NzG</a></small>
+			<small class="hire">
+				<a href="http://www.linkedin.com/pub/noah-gordon/42/34a/67/"></a>
+			</small>
 		</footer>
 	</body>
 </html>
