--- a/app/assets/templates/listings/show.jst.ejs
+++ b/app/assets/templates/listings/show.jst.ejs
@@ -66,8 +66,22 @@
 	</section>
 	
 	<article class="photo-gallery">
-		<img src="<%= listing.escape("cover_pic") %>">
-	</div>
+		<% if (listing.get("pictures") && listing.get("pictures").length > 0) { %>
+			<div class="jcarousel">
+				<ul class="group">
+					<% listing.get("pictures").forEach(function(photo) { %>
+						<li><img src="<%= photo.url %>"></li>
+					<% }); %>
+				</ul>
+			<% } else { %>
+				<p>No images available.</p>
+			<% } %>
+		</div>
+		
+    <a class="jcarousel-prev" href="#">‹</a>
+    <div class="jcarousel-pagination"></div>
+    <a class="jcarousel-next" href="#">›</a>
+	</article>
 	
 	<section class="listing-details">
 	
