--- a/app/assets/templates/listings/edit.jst.ejs
+++ b/app/assets/templates/listings/edit.jst.ejs
@@ -21,6 +21,11 @@
 				<input type="file" name="cover_pic" id="listing-pic">
 			</article>
 			
+			<article class="pics group">
+				<label for="add-pics">Additional Photos: </label>
+				<input type="file" name="photos" id="add-pics" multiple>
+			</article>
+			
 		<h3>Basic Info</h3>
 	
 			<article class="city group">
