Get multiple image uploads working.

--- a/app/assets/templates/listings/edit.jst.ejs
+++ b/app/assets/templates/listings/edit.jst.ejs
@@ -22,7 +22,7 @@
 			</article>
 			
 			<article class="pics group">
-				<label for="add-pics">Additional Photos: </label>
+				<label for="add-pics">Add More Photos: </label>
 				<input type="file" name="photos" id="add-pics" multiple>
 			</article>
 			
