Allow users to upload cover pic andother photos at the same time. Remove bug wherein old photos were saved multiple times.

--- a/app/assets/templates/listings/edit.jst.ejs
+++ b/app/assets/templates/listings/edit.jst.ejs
@@ -18,12 +18,12 @@
 			
 			<article class="cover-pic group">
 				<label for="listing-pic">Cover Photo: </label>
-				<input type="file" name="cover_pic" id="listing-pic">
+				<input type="file" name="new_cover_pic" id="listing-pic">
 			</article>
 			
 			<article class="pics group">
 				<label for="add-pics">Add More Photos: </label>
-				<input type="file" name="photos" id="add-pics" multiple>
+				<input type="file" name="new_photos" id="add-pics" multiple>
 			</article>
 			
 		<h3>Basic Info</h3>
