Allow users to upload a single unavailable date. Fix display on show page.

--- a/app/assets/stylesheets/listing_form.css.scss
+++ b/app/assets/stylesheets/listing_form.css.scss
@@ -97,6 +97,15 @@ div.form-container {
 		}
 	}
 	
+	article.unavail_ranges {
+		input {
+			border: 1px solid #000;
+			margin-left: 20px;
+			width: 130px;
+			font-size: 14px;
+		}
+	}
+	
 	small {
 		display: block;
 		margin-bottom: 20px;
