--- a/app/assets/templates/listings/edit.jst.ejs
+++ b/app/assets/templates/listings/edit.jst.ejs
@@ -26,6 +26,12 @@
 				<input type="file" name="new_photos" id="add-pics" multiple>
 			</article>
 			
+			<article class="unavail_ranges group">
+				<label for="unavail-start">Add a date range when your listings is unavailable:</label>
+				<input type="date" name="unavail_start" id="unavail-start">
+				<input type="date" name="unavail_end" id="unavail-end">
+			</article>
+			
 		<h3>Basic Info</h3>
 	
 			<article class="city group">
