Resolve sign-in bug and update sign in form with proper typing.

--- a/app/assets/templates/users/new.jst.ejs
+++ b/app/assets/templates/users/new.jst.ejs
@@ -3,22 +3,22 @@
 <form class="user-form">
 
   <input type="text"
-         name="user[email]"
+         name="email"
          id="user-email"
          value="<%= user.escape("email") %>">
   <label for="user-email">Email</label>
 
-  <input type="password" name="user[password]" id="user-password">
+  <input type="password" name="password" id="user-password">
   <label for="user-password">Password</label>
 
   <input type="text"
-         name="user[fname]"
+         name="fname"
          id="user-fname"
          value="<%= user.escape("fname") %>">
   <label for="user-fname">First Name</label>
 
   <input type="text"
-         name="user[lname]"
+         name="lname"
          id="user-lname"
          value="<%= user.escape("lname") %>">
   <label for="user-lname">Last Name</label>
